[package]
name = "gnss-qc"
version = "0.1.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "GNSS data Quality Control"
homepage = "https://github.com/rtk-rs"
repository = "https://github.com/rtk-rs/gnss-qc"
keywords = ["geo", "gnss", "gps"]
categories = ["science", "science::geo"]
edition = "2021"

[features]
default = ["sp3"] # no features by default

# Unlock support of high precision SP3 files.
# When targetting highest precision analysis and solutions, like in PPP,
# SP3 files are mandatory. When deactivated, we simply cannot load
# such files into a context, only RINEX post processing is possible.
sp3 = ["dep:sp3"]

# Unlock graphical analysis (plots rendering), otherwise reports are solely text based
# plot = [
#     "dep:plotly", 
# ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[dependencies]
log = "0.4"
thiserror = "2"

strum = "0.27"
strum_macros = "0.26"
itertools = "0.14.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }

hifitime = "4.0"
anise = { version = "0.5.3", features = ["embed_ephem"] }

gnss-rs = { version = "2.3.5", features = ["serde"] }
gnss-qc-traits = { version = "0.1.1", features = ["processing"] }

maud = "0.27"
plotly = "0.12"

sp3 = { version = "1.1.2", features = ["qc", "processing", "anise", "serde"], optional = true }
rinex = { version = "0.17.0", features = ["qc", "processing", "obs", "clock", "nav", "ionex", "serde"]  }

[dev-dependencies]
serde_json = "1"
